--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "devDependencies": {
         "axios": "^0.19",
         "cross-env": "^5.1",
+        "exports-loader": "^0.7.0",
+        "imports-loader": "^0.8.0",
         "jquery-ui": "^1.12.1",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.13",
@@ -27,6 +29,7 @@
         "font-awesome": "^4.7.0",
         "jquery": "^3.4.1",
         "npm": "^6.13.2",
-        "popper.js": "^1.16.0"
+        "popper.js": "^1.16.0",
+        "tinymce": "^5.1.5"
     }
 }
