--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "caouecs/laravel-lang": "~4.0",
         "fideloper/proxy": "^4.0",
         "freshwork/chilean-bundle": "^2.1",
+        "jenssegers/date": "^3.5",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
         "tinymce/tinymce": "^5.1"
